<resources>
    <string name="app_name">Score Keeper</string>
    <string name="default_team_1_name">Team 1</string>
    <string name="default_team_2_name">Team 2</string>
    <string name="default_score">0</string>
    <string name="goals">Goals</string>
    <string name="minus_sign">-</string>
    <string name="plus_sign">+</string>
    <string name="fouls">Fouls</string>
    <string name="default_fouls">0</string>
    <string name="reset">Reset</string>
</resources>
